  * checks/debconf.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      the debconf-spec refs.  (Closes: #878449)
  * checks/debhelper.{desc,pm}:
    + [NT] Add check for using using the debhelper tooling from the
      autotools-dev package.  These have been replaced by the changes
      inside debhelper itself.
  * checks/watch-file.pm:
    + [CL] Include the offending URI in debian-watch-uses-insecure-uri
      output, not the line number.

  * data/fields/essential:
    + [CL] Apply patch from Helmut Grohne <helmut@subdivi.de> to treat
      e2fsprogs as non-essential.  (Closes: #878518)
  * data/spelling/corrections:
    + [CL] Revert addition of "none were" -> "none was" multiword spelling
      correction as it is "acceptable beyond serious criticism".
      (Closes: #878457)

  * doc/lintian.xml, checks/{fields,files,menu-format}.desc, etc.:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      a large number of errors in links.  (Closes: #878521)

  * private/refresh-manual-refs:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      the Debconf reference mapping. Many thanks!  (Closes: #878449)
    + [CL] Apply a patch series from Ville Skyttä <ville.skytta@iki.fi>
      to a number of issues in the Menu, Perl, Python and Debian
      Policy parsing.

  * t/scripts/pod-synopsis.t:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to skip all
      POD synopsis tests if Test::Pod is not available.  (Closes: #878522)

 -- Chris Lamb <lamby@debian.org>  Thu, 12 Oct 2017 14:08:44 -0400

lintian (2.5.55) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - debian-watch-uses-insecure-uri
      - django-package-does-not-depend-on-django
      - example-script-uses-deprecated-nodejs-location
      - priority-extra-is-replaced-by-priority-optional
      - python-module-has-overly-generic-name
      - systemd-service-file-wraps-init-script